k8s/minikube/posgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finlake-postgres
  namespace: finlake
spec:
  replicas: 1
  selector: { matchLabels: { app: finlake-postgres } }
  template:
    metadata: { labels: { app: finlake-postgres } }
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts:
            - { name: data, mountPath: /var/lib/postgresql/data }
            - { name: init-scripts, mountPath: /docker-entrypoint-initdb.d }
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: postgres-pvc }
        - name: init-scripts
          configMap: { name: postgres-init-scripts }
---
apiVersion: v1
kind: Service
metadata: { name: finlake-postgres, namespace: finlake }
spec:
  selector:
    app: finlake-postgres
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
