k8s/minikube/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: finlake
spec:
  ingressClassName: nginx

  rules:
  - host: airflow.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finlake-airflow
            port:
              number: 8080
