k8s/minikube/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: finlake
spec:
  ingressClassName: nginx

  rules:
  - host: minio.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finlake-minio
            port:
              number: 9001
