k8s/minikube/nessie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessie-ingress
  namespace: finlake
spec:
  ingressClassName: nginx

  rules:
  - host: nessie.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finlake-nessie
            port:
              number: 19120
